extension AppliedFiltersModel {

    static var mock: AppliedFiltersModel {
        AppliedFiltersModel(
            alcohol: "Alcoholic",
            category: "Cocktail",
            glass: "Cocktail glass"
        )
    }

}
